# anemometer

./: .gitignore  .gitmodules  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  build-production.sh  cfg.toml.example  create-ota-img.sh  export-esp.sh  partitions.csv.TinyS3  sdkconfig.defaults  shared-spi-bus.txt  start_ws.py
.cargo/: config.toml
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: ci.yml
CAD/: Housing_Bohrungen_back.FCStd  Housing_Bohrungen_back.FCStd1  Housing_Bohrungen_front.FCStd  Housing_Bohrungen_front.FCStd1  Magnetaufnahme.FCStd  Magnetaufnahme.FCStd1
STL/: housing_back.stl
anemometer-calibration/: Cargo.toml  build-calibration.sh  erase_ota.sh  partitions.csv  partitions.csv.feather
anemometer-calibration/html/: ota-update.html
anemometer-calibration/src/: anemometer.rs  display.rs  gps_mtk3339.rs  lazy_http_server.rs  main.rs  neopixel.rs  peripherals.rs  screen.rs  sdmmc.rs  web_server.rs
anemometer-calibration/tests/: endurance-test.sh
anemometer-cli/: Cargo.toml
anemometer-production/: Cargo.toml  nvs.csv  partitions.csv  sdkconfig.defaults
anemometer-production/.cargo/: config.toml
anemometer-production/scripts/: create-nvs-part.sh  create-ota-img.sh  delete-ota.sh  flash_nvs.sh  send_firmware_update.sh  send_restart.sh
anemometer-production/src/: configuration.rs  data_processing.rs  global_settings.rs  main.rs  mqtt_msg.rs  peripherals.rs  services.rs  state.rs  task.rs  utils.rs
anemometer-production/src/task/: httpd.rs  mqtt.rs  ota.rs  publisher.rs
anemometer-production/src/utils/: aws_credential_service.rs  cstr.rs  datetime.rs  errors.rs  nvs_ext.rs
cups-simulator/: Cargo.toml
cups-simulator/src/: main.rs
src/: anemometer.rs  display.rs  errors.rs  gps_mtk3339.rs  main.rs  neopixel.rs  peripherals.rs  screen.rs  sdmmc.rs  services.rs  web_server.rs
tests/: RMC.txt
