[package]
name = "anemometer"
version = "0.4.5"
authors = ["Michael Zill <michael.zill@gmail.com>"]
edition = "2021"
resolver = "2"
categories = ["embedded", "hardware-support"]
keywords = ["esp-idf", "esp32"]
repository = "https://github.com/taunusflieger/anemometer"
license = "MIT OR Apache-2.0"
readme = "README.md"

[profile.release]
opt-level = "s"

[profile.dev]
debug = true    # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[features]
default = ["tft", "gps"]
experimental = ["esp-idf-svc/experimental", "embedded-svc/experimental"]
tft = [
    "mipidsi",
    "gfx-xtra",
    "embedded-graphics",
    "embedded-graphics-core",
    "display-interface-spi",
    "display-interface",
    "profont",
]
gps = ["nmea"]

[dependencies]
embedded-graphics = { version = "0.7.1", optional = true }
embedded-graphics-core = { version = "0.3.3", optional = true }
nmea = { git = "https://github.com/AeroRust/nmea", optional = true }
#nmea = { path = "../nmea", optional = true }
heapless = "0.7"
#futures = { version = "0.3", features = ["async-await"] }
embedded-hal = { git = "https://github.com/rust-embedded/embedded-hal", tag = "v1.0.0-alpha.9" }
embedded-svc = { verion = "0.23", features = ["nightly", "experimental"] }
esp-idf-sys = { version = "0.31.12", features = ["binstart"] }
esp-idf-svc = { version = "0.43", features = ["nightly", "experimental"] }
esp-idf-hal = { version = "0.39", features = [] }
display-interface = { version = "0.4", optional = true }
display-interface-spi = { version = "0.4", optional = true }
smart-leds = "*"
gfx-xtra = { version = "0.1", optional = true }
mipidsi = { version = "0.5", optional = true }
anyhow = "1.0"
hex = "0.4.3"
shared-bus = "0.2.5"
toml-cfg = "0.1"
profont = { version = "0.6.1", optional = true }
url = "2"
embedded-sdmmc = { git = "https://github.com/rust-embedded-community/embedded-sdmmc-rs.git" }
log = { version = "0.4", features = [
    "max_level_debug",
    "release_max_level_debug",
] }


[build-dependencies]
embuild = "0.30.5"
anyhow = "1"

[package.metadata.espflash]
partition_table = "partitions.csv"

[patch.crates-io]
#esp-idf-sys = { git = "https://github.com/esp-rs/esp-idf-sys" }
