[package]
name = "anemometer"
version = "0.4.6"
authors = ["Michael Zill <michael.zill@gmail.com>"]
edition = "2021"
resolver = "2"
categories = ["embedded", "hardware-support"]
keywords = ["esp-idf", "esp32"]
repository = "https://github.com/taunusflieger/anemometer"
license = "MIT OR Apache-2.0"
readme = "README.md"

[profile.release]
opt-level = "s"

[profile.dev]
debug = true    # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[features]

experimental = ["esp-idf-svc/experimental", "embedded-svc/experimental"]


[dependencies]
embedded-graphics = { version = "0.7.1" }
embedded-graphics-core = { version = "0.3.3" }

embedded-hal = { git = "https://github.com/rust-embedded/embedded-hal", tag = "v1.0.0-alpha.9" }
embedded-svc = { version = "0.24", features = ["nightly", "experimental"] }
esp-idf-sys = { version = "0.32.1", features = ["binstart"] }
esp-idf-svc = { git = "https://github.com/taunusflieger/esp-idf-svc", branch = "idf5_fixes", features = [
    "nightly",
    "experimental",
] }
esp-idf-hal = { git = "https://github.com/taunusflieger/esp-idf-hal", features = [
] }
display-interface = { version = "0.4" }
display-interface-spi = { version = "0.4" }
embedded-sdmmc = { git = "https://github.com/rust-embedded-community/embedded-sdmmc-rs.git" }
nmea = { git = "https://github.com/AeroRust/nmea" }
heapless = "0.7"
smart-leds = { version = "0.3.0" }
gfx-xtra = { version = "0.1" }
mipidsi = { version = "0.5" }
anyhow = "1.0"
hex = "0.4.3"
toml-cfg = "0.1"
profont = { version = "0.6.1" }
url = "2"
cfg-if = "1.0.0"
chrono = { version = "0.4.23", default-features = false }
log = { version = "0.4", features = [
    "max_level_debug",
    "release_max_level_debug",
] }


[build-dependencies]
embuild = { version = "0.31.0", features = ["espidf", "elf"] }
anyhow = "1"

[package.metadata.espflash]
partition_table = "partitions.csv"

[patch.crates-io]
#esp-idf-sys = { git = "https://github.com/esp-rs/esp-idf-sys" }
embedded-hal = { git = "https://github.com/rust-embedded/embedded-hal", tag = "v1.0.0-alpha.9" }
esp-idf-hal = { git = "https://github.com/taunusflieger/esp-idf-hal" }
