[package]
name = "esp32-anemometer"
version = "0.1.30"
authors = ["Michael Zill <michael.zill@gmail.com>"]
edition = "2021"
resolver = "2"

[profile.release]
opt-level = "s"

[profile.dev]
debug = true    # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[features]

[dependencies]
embedded-hal = { git = "https://github.com/rust-embedded/embedded-hal", tag = "v1.0.0-alpha.9" }
embedded-svc = { version = "0.24", features = ["nightly", "experimental"] }
esp-idf-sys = { version = "0.32.1", features = ["binstart"] }
esp-idf-svc = { git = "https://github.com/taunusflieger/esp-idf-svc", branch = "idf5_fixes", features = [
    "nightly",
    "experimental",
    "embassy-time-driver",
    "embassy-time-isr-queue",
] }
esp-idf-hal = { version = "0.40.1", features = [
    "edge-executor",
    "embassy-sync",
    "critical-section",
] }
heapless = "0.7"
critical-section = "1.1"
edge-executor = { version = "0.3" }
channel-bridge = { version = "0.2", default-features = false, features = [
    "notification",
    "nightly",
    "embedded-svc",
] }
log = { version = "0.4", features = [
    "max_level_debug",
    "release_max_level_debug",
] }
embassy-futures = { version = "0.1" }
embassy-sync = { version = "0.1", features = ["std"] }
time = { version = "0.3", features = ["macros", "formatting", "parsing"] }
embassy-time = { version = "0.1" }
once_cell = { version = "1.17.0" }
anyhow = { version = "1.0" }
serde = { version = "1", default-features = false }
postcard = { version = "1.0.2" }
lazy_static = { version = "1.4.0" }
fixed = { version = "1.21.0" }
static_cell = { version = "1.0.0" }
serde_json = { version = "1.0.91" }
rusty-s3 = { version = "0.4.0" }

[package.metadata.espflash]
partition_table = "partitions.csv"

[package.metadata.esp-idf-sys]
esp_idf_tools_install_dir = "global"
esp_idf_version = "branch:release/v5.0"
[build-dependencies]
embuild = { version = "0.30.4" }

[patch.crates-io]
#embedded-svc = { path = "../embedded-svc" }
