[package]
edition = "2021"
name = "cups-simulator"
version = "0.1.0"
license = "MIT OR Apache-2.0"


[dependencies]
embassy-sync = { version = "0.1.0", path = "../../embassy/embassy-sync", features = [
    "defmt",
] }
embassy-executor = { version = "0.1.0", path = "../../embassy/embassy-executor", features = [
    "defmt",
    "integrated-timers",
] }
embassy-time = { version = "0.1.0", path = "../../embassy/embassy-time", features = [
    "defmt",
    "defmt-timestamp-uptime",
] }
embassy-rp = { version = "0.1.0", path = "../../embassy/embassy-rp", features = [
    "defmt",
    "unstable-traits",
    "nightly",
    "unstable-pac",
    "time-driver",
    "pio",
    "critical-section-impl",
] }
embassy-usb = { version = "0.1.0", path = "../../embassy/embassy-usb", features = [
    "defmt",
] }

embassy-futures = { version = "0.1.0", path = "../../embassy/embassy-futures" }
embassy-usb-logger = { version = "0.1.0", path = "../../embassy/embassy-usb-logger" }

defmt = "0.3"
defmt-rtt = "0.4"

#cortex-m = { version = "0.7.6", features = ["critical-section-single-core"] }
cortex-m = { version = "0.7.6" }
cortex-m-rt = "0.7.0"
panic-probe = { version = "0.3", features = ["print-defmt"] }
futures = { version = "0.3.17", default-features = false, features = [
    "async-await",
    "cfg-target-has-atomic",
    "unstable",
] }
byte-slice-cast = { version = "1.2.0", default-features = false }

embedded-hal-1 = { package = "embedded-hal", version = "=1.0.0-alpha.9" }
embedded-hal-async = "0.2.0-alpha.0"
embedded-io = { version = "0.4.0", features = ["async", "defmt"] }
embedded-storage = { version = "0.3" }


[profile.release]
debug = true
